[Docs] Writing First Post of Blog

--- a/public/posts/2024-01-28_UNIJAM.md
+++ b/public/posts/2024-01-28_UNIJAM.md
@@ -1,15 +1,43 @@
-# 들어가며...
-
-2024년 초.
-
-이 당시의 제가 어떤 생각이였는지는 모르겠지만, 대구에 살면서 한 달에 서울을 3번 왕복하는 정신나간 일정을 계획하게 되었습니다.
-
+## 들어가며...
+2024년 초.  
+이 당시의 제가 어떤 생각이였는지는 모르겠지만, 대구에 살면서 한 달에 서울을 3번 왕복하는 정신나간 일정을 계획하게 되었습니다.  
 이번에는 이 중 첫 번째 여정에 대한 이야기를 풀어보려고 합니다.
 
-사실 처음부터 제가 게임잼에 운영팀으로 참여하고자 하는 생각은 크게 없었습니다.
+사실 처음부터 제가 게임잼에 운영팀으로 참여하고자 하는 생각은 크게 없었습니다.  
+처음에 동아리연합회에서 게임잼 기획할 때만 해도 적당히 아이디어만 내고 빠지려고 생각은 했었는데... 이게 기획을 하다보니까 생각보다 재미가 붙는게 아니겠습니까?   
+마침 방학이라 할 일도 없고 서울 구경도 오랜만에 가보고 싶어서 현장 운영에 참여가 가능하다고 말해버렸습니다.  
+물론 이 때는 서울을 질리도록 갈 줄은 생각도 못했지만...
 
-처음에 동아리연합회에서 게임잼 기획할 때만 해도 적당히 아이디어만 내고 빠지려고 생각은 했었는데... 이게 기획을 하다보니까 생각보다 재미가 붙더라구요 허허
 
-마침 방학이라 할 일도 없고 서울 구경도 오랜만에 가보고 싶어서 현장 운영에 참여가 가능하다고 말해버렸습니다.
+## 그렇게 시작된 서울행
+<figure>
+    <img src="/media/post/2024-01-28_UNIJAM/20240126_094709.jpg" alt="동대구역" />
+    <figcaption>동대구역에서 출발</figcaption>
+</figure>
+게임잼이 1월 26일 오후부터 28일까지 2박 3일이라 26일 아침 일찍 대구에서 출발했습니다.  
+SRT를 타고 수서역에 도착해서 수서역에서 다시 서현역까지 지하철로 이동했습니다.  
 
-![동대구역](/media/post/2024-01-28_UNIJAM/20240126_094709.jpg)
+<figure>
+    <img src="/media/post/2024-01-28_UNIJAM/20240126_155742.jpg" alt="서현 게임파크21" />
+    <figcaption>서현 게임파크 21 첫방문</figcaption>
+</figure>
+
+물론 수도권에 도착하면 오락실 투어를 빼먹을 수 없기 때문에, 마침 행사장 근처에 오락실이 있어서 찾아갔습니다.  
+골목 구석에다가 2층에 위치해 있어서 찾기 좀 어렵긴 했는데, 안에 리플렉 비트에 그루브 코스터까지 작은 오락실에서는 잘 볼 수 없는 게임들도 있어서 한 번씩 다 돌리고 왔습니다.  
+
+## UNIJAM 2024
+슬슬 일하러 갈 시간이 되어 오락실에서 나와 행사 운영진들끼리 미리 모이기로 한 장소로 이동했습니다.  
+다들 실제로 만나는 것은 처음이라 카페에 모여서 이런저런 이야기를 좀 하다가 참여 인원들 명찰을 만들고 미니게임 상품을 구매했습니다.
+
+<figure>
+    <img src="/media/post/2024-01-28_UNIJAM/20240126_165348.jpg" alt="스마일게이트" />
+    <figcaption>스마일게이트 본사 입성</figcaption>
+</figure>
+전국에 있는 각 대학교들의 게임 동아리들이 모여서 만든 동아리 연합이였기 때문에 처음에는 장소나 후원사를 구하기 어려웠는데, 마침 스마일게이트에서 인디 게임 행사 지원을 많이 하면서 저희에게도 장소를 빌려주신다고 하셔서 스마일게이트 분당 사무실 건물에서 진행하게 되었습니다.
+
+<figure>
+    <img src="/media/post/2024-01-28_UNIJAM/IMG_0709.jpg" alt="스마일게이트" />
+    <figcaption>이제부터 여기는 우리가 접수한다</figcaption>
+</figure>
+시작 예정 시간까지 얼마 남지 않아서 후다닥 현수막 설치하고 포스터 붙이고 명찰이랑 팜플렛 준비하면서 열심히 일했습니다.
+
