[Docs] 2024-01-28_UNIJAM.md Done

--- a/public/posts/2024-01-28_UNIJAM.md
+++ b/public/posts/2024-01-28_UNIJAM.md
@@ -72,7 +72,24 @@
     <figcaption>3일차 아침 - 든든한 콩나물 국밥</figcaption>
 </figure>
 
+행사장에 화장실은 있어도 샤워 시설은 당연히 없어서 3일차 아침에 걸어서 15분 거리에 있는 목욕탕을 갔다 왔습니다.  
+개운하게 샤워하고 오는 김에 근처 콩나물 국밥집에 들러서 식사를 든든하게 해결하고 왔습니다. 골목길에 있는 오래된 간판을 단 좁은 가게였는데, 계란 후라이에 뜨끈한 국밥 조합이 굉장히 고소해서 정신없이 먹어치웠습니다.  
+
+이렇게 3일을 보내고 대망의 마지막 시간이 왔습니다.  
+총 10팀을 만들어서 10개의 게임이 나왔고, 마지막 날 끝나기 전에 만들어진 게임들을 서로 체험해보는 시간을 가졌습니다. 2박 3일이라는 짧은 시간이였는데도 다들 퀄리티가 굉장히 좋은 게임들을 만드셔서 재미있게 플레이 했습니다.
+
 <figure>
     <img src="/media/post/2024-01-28_UNIJAM/20240128_185459.jpg" alt="집으로" />
     <figcaption>드디어 집으로...</figcaption>
 </figure>
+
+뒷풀이도 있었는데 저는 기차 시간이 빡빡해서 끝나자마자 뒷정리만 조금 하고 바로 뛰어갔습니다. 기차 출발하기 2분 전에 도착해서 겨우겨우 탄... 이렇게 길다면 길고 짧다면 짧은 2박 3일이 끝났습니다.  
+살면서 이 정도 규모의 행사를 운영해본다는 것 자체가 처음이라 시작할 때는 불안감이 앞섰지만, 시간이 점점 지날수록 '생각보다 할 만하기도 하고 재미있네?'하는 생각이 들었습니다. 새로운 도전에 부담감을 느끼던 저에게 하나의 전환점이 된 날이라고나 할까요... 이 행사를 준비해 본 이후로 무슨 일을 하면 '에라 모르겠다!' 하면서 냅다 들이박고 보는 성격이 생긴 것 같습니다.  
+
+이번 UNIJAM 후기는 여기까지입니다. 게임잼에서 나왔던 게임들을 플레이 해보고 싶으신 분들이 있으실 것 같아 아래에 스토브 스토어 페이지와 관련 기사를 첨부합니다.  
+읽어주셔서 감사합니다.
+
+​
+### 관련 링크
+- [제 2회 UNIJAM | STOVE 페이지](https://store.onstove.com/ko/event/exhibit/533)
+- [같이 만들면 더 재밌으니까, 연합동아리 'UNIDEV' | 인벤 기사](https://www.inven.co.kr/webzine/news/?news=292626&sw=UNIDEV&site=webzine)
