[Docs] 2024-02-0-20_NEXON.md

--- a/public/posts/2024-01-28_UNIJAM.md
+++ b/public/posts/2024-01-28_UNIJAM.md
@@ -26,7 +26,7 @@
 골목 구석에다가 2층에 위치해 있어서 찾기 좀 어렵긴 했는데, 안에 리플렉 비트에 그루브 코스터까지 작은 오락실에서는 잘 볼 수 없는 게임들도 있어서 한 번씩 다 돌리고 왔습니다.  
 
 
-## UNIJAM 2024
+## 제 2회 UNIJAM
 슬슬 일하러 갈 시간이 되어 오락실에서 나와 행사 운영진들끼리 미리 모이기로 한 장소로 이동했습니다.  
 다들 실제로 만나는 것은 처음이라 카페에 모여서 이런저런 이야기를 좀 하다가 참여 인원들 명찰을 만들고 미니게임 상품을 구매했습니다.
 
