[Docs] Writing 2024-02-20_NEXON.md

--- a/public/posts/2024-02-20_NEXON.md
+++ b/public/posts/2024-02-20_NEXON.md
@@ -1,11 +1,39 @@
 ## 들어가며...
 안녕하십니까 여러분.  
-이번에는... 동아리 발표회 때문에 넥슨 본사에 갔던 일을 적어보려고 합니다.  
-맞습니다. 올해 벌써 네 번째 서울 방문입니다. 1년의 20%도 아직 지나지 않았는데 교통비에만 이미 40만원 이상 쓰게 되었는데... 뭐 나머지는 미래의 제가 해결해주지 않을까요.
+이번에는 동아리 발표회 때문에 넥슨 본사에 갔던 일을 적어보려고 합니다.  
+맞습니다. 올해 벌써 네 번째 서울 방문입니다. 1년의 20%도 아직 지나지 않았는데 교통비에만 이미 40만원 이상 쓰게 되었는데... 뭐 미래의 제가 어떻게든 해결해주지 않을까요.
 
 
 ## 고통과 노동의 서울행 
 <figure>
     <img src="/media/post/2024-02-20_NEXON/20240219_190203.jpg" alt="포항역" />
     <figcaption>이번에는 포항역에서 출발</figcaption>
+</figure>
+
+2월 19일이 대학교 개강 날이였는데, 행사가 20일이라 팀원들이 모두 포항에 있었기에 단체로 서울로 올라갔습니다. 팀원은 저 포함해서 총 6명이였는데, 한 명은 병원 예약이 있어서 같이 못 가고 5명으로 출발했습니다.  
+원래 발표회 당일 아침 일찍 기차를 타고 가려고 했는데 부스 세팅이 아침 8시부터라 시간이 굉장히 애매했습니다. 그래서 그냥 전날 저녁에 서울에 미리 올라가서 찜질방에서 자고 아침에 버스 타고 가기로 결정.  
+가면서 기차에서 자려고 했지만 이번 발표회 게임 버그를 고치거나 동아리 일을 처리하는 등 할 일이 매우 많았기 때문에 다 같이 기차 안에서 노트북 펼쳐놓고 코딩을 했습니다(...)  
+
+<figure>
+    <img src="/media/post/2024-02-20_NEXON/20240219_220006.jpg" alt="서울역" />
+    <figcaption>저녁의 한산한 서울역</figcaption>
+</figure>
+
+그렇게 쉬지 않고 달린 기차와 기차에서도 쉬지 못한 저희들은 서울역에 도착했습니다. 저 풍경만 올해 7번째 보는 중...  
+아무튼 판교 쪽에 미리 알아둔 찜질방이 있어 그쪽으로 가려고 버스를 타고 1시간 정도 이동했습니다.  
+
+<figure>
+    <img src="/media/post/2024-02-20_NEXON/20240219_232128.jpg" alt="찜질방" />
+    <figcaption>어딘가의 찜질방</figcaption>
+</figure>
+
+말이 판교 쪽이지 근처에 묵을 만한 가장 가까운 찜질방이 넥슨 사옥에서 버스 타고 30분 거리라 이 악물고 움직여서 대충 밤 11시 쯤에 도착했습니다.  
+조금 비싸긴 했지만 안에 편의점도 따로 있어서 과자랑 음료수 왕창 사놓고 구석 테이블에 다 같이 둘러 앉아서 새벽 4시까지 게임 버그 고치다가 잤습니다.  
+아침 8시까지 가야 했기 때문에 2시간 30분 정도만 자고 다시 일어나서 아침 편의점에서 때우고 넥슨 사옥으로 출발.  
+
+
+## 2024 NDM 게임제작발표회
+<figure>
+    <img src="/media/post/2024-02-20_NEXON/20240220_084639.jpg" alt="넥슨본사" />
+    <figcaption>2024 NDM 게임제작발표회</figcaption>
 </figure>
