[Docs] Writing 2024-05-10_POSTECH.md

--- a/public/posts/2024-01-28_UNIJAM.md
+++ b/public/posts/2024-01-28_UNIJAM.md
@@ -64,6 +64,7 @@
 </figure>
 
 대부분은 서울에 사시는 분들이라 종종 집에 왔다갔다 하는 경우가 있었는데 저는 지방에서 올라온터라 그냥 3일 내내 게임잼 진행장에 박혀 있었습니다.  
+
 사실 말이 운영팀이지 게임잼 기간 동안은 출입문 지키기 & 미니게임 운영 밖에 할 일이 없었기 때문에 그냥 노트북으로 개인 작업 좀 하다가 돌아다니면서 구경하고 조금 쉬고 다시 개인 작업하고... 무한 반복이였던 것 같습니다.  
 다른 분들도 심심하셨는지 몬스터 음료수 더미가 어느 순간부터 UNIDEV 로고로 바뀌어 있기도 했습니다ㅋㅋㅋ
 
@@ -78,12 +79,15 @@
 이렇게 3일을 보내고 대망의 마지막 시간이 왔습니다.  
 총 10팀을 만들어서 10개의 게임이 나왔고, 마지막 날 끝나기 전에 만들어진 게임들을 서로 체험해보는 시간을 가졌습니다. 2박 3일이라는 짧은 시간이였는데도 다들 퀄리티가 굉장히 좋은 게임들을 만드셔서 재미있게 플레이 했습니다.
 
+
+## 마무리
 <figure>
     <img src="/media/post/2024-01-28_UNIJAM/20240128_185459.jpg" alt="집으로" />
     <figcaption>드디어 집으로...</figcaption>
 </figure>
 
 뒷풀이도 있었는데 저는 기차 시간이 빡빡해서 끝나자마자 뒷정리만 조금 하고 바로 뛰어갔습니다. 기차 출발하기 2분 전에 도착해서 겨우겨우 탄... 이렇게 길다면 길고 짧다면 짧은 2박 3일이 끝났습니다.  
+
 살면서 이 정도 규모의 행사를 운영해본다는 것 자체가 처음이라 시작할 때는 불안감이 앞섰지만, 시간이 점점 지날수록 '생각보다 할 만하기도 하고 재미있네?'하는 생각이 들었습니다. 새로운 도전에 부담감을 느끼던 저에게 하나의 전환점이 된 날이라고나 할까요... 이 행사를 준비해 본 이후로 무슨 일을 하면 '에라 모르겠다!' 하면서 냅다 들이박고 보는 성격이 생긴 것 같습니다.  
 
 이번 UNIJAM 후기는 여기까지입니다. 게임잼에서 나왔던 게임들을 플레이 해보고 싶으신 분들이 있으실 것 같아 아래에 스토브 스토어 페이지와 관련 기사를 첨부합니다.  
