--- a/public/posts/2024-02-20_NEXON.md
+++ b/public/posts/2024-02-20_NEXON.md
@@ -1,7 +1,11 @@
 ## 들어가며...
 안녕하십니까 여러분.  
 이번에는 동아리 발표회 때문에 넥슨 본사에 갔던 일을 적어보려고 합니다.  
-맞습니다. 올해 벌써 네 번째 서울 방문입니다. 1년의 20%도 아직 지나지 않았는데 교통비에만 이미 40만원 이상 쓰게 되었는데... 뭐 미래의 제가 어떻게든 해결해주지 않을까요.
+
+넥슨에서는 NDM(Nexon Dream Members)이라고 해서, 몇몇 대학의 게임 개발 동아리들을 지원해주는 사업을 진행하고 있습니다. 해당 동아리들을 넥슨 본사로 초청하여 매 년마다 게임 발표회를 개최하기 때문에, 저희 동아리도 방학동안 개발한 게임을 들고 가서 발표를 하게 됩니다.  
+제가 이번에 동아리 회장이 된 지라 얄짤없이 저희 동아리 총괄을 맡게 되었습니다.  
+
+맞습니다. 개인적으로는 올해 벌써 네 번째 서울 방문입니다. 1년의 20%도 아직 지나지 않았는데 교통비에만 이미 40만원 이상 쓰게 되었는데... 뭐 미래의 제가 어떻게든 해결해주지 않을까요.  
 
 
 ## 고통과 노동의 서울행 
@@ -11,6 +15,7 @@
 </figure>
 
 2월 19일이 대학교 개강 날이였는데, 행사가 20일이라 팀원들이 모두 포항에 있었기에 단체로 서울로 올라갔습니다. 팀원은 저 포함해서 총 6명이였는데, 한 명은 병원 예약이 있어서 같이 못 가고 5명으로 출발했습니다.  
+
 원래 발표회 당일 아침 일찍 기차를 타고 가려고 했는데 부스 세팅이 아침 8시부터라 시간이 굉장히 애매했습니다. 그래서 그냥 전날 저녁에 서울에 미리 올라가서 찜질방에서 자고 아침에 버스 타고 가기로 결정.  
 가면서 기차에서 자려고 했지만 이번 발표회 게임 버그를 고치거나 동아리 일을 처리하는 등 할 일이 매우 많았기 때문에 다 같이 기차 안에서 노트북 펼쳐놓고 코딩을 했습니다(...)  
 
@@ -37,3 +42,43 @@
     <img src="/media/post/2024-02-20_NEXON/20240220_084639.jpg" alt="넥슨본사" />
     <figcaption>2024 NDM 게임제작발표회</figcaption>
 </figure>
+
+중간에 버스를 한 번 갈아타야 했는데, 출근 시간대라는 생각을 하지도 않아서 버스만 30분 정도 기다렸습니다.  
+결과적으로 조금 늦게 도착하긴 했습니다만, 크게 준비할 것은 없어서 부스만 금방 차리고 발표회장 들어가서 행사 시작하기 전까지 잤습니다(...)  
+
+<figure>
+    <img src="/media/post/2024-02-20_NEXON/20240220_094219.jpg" alt="to the STAR" />
+    <figcaption>to the STAR</figcaption>
+</figure>
+
+저희 게임인 to the STAR 부스 사진입니다. 정확히는 이 때 상태로는 그냥 코드 덩어리라 부르는 것이 맞겠지만...  
+부스 운영을 아침 9시부터 오후 4시까지 해야 했기 때문에, 전날 잠을 거의 못 잔 저희는 2명씩 교대로 돌아가면서 부스를 운영했습니다. 나머지는 다른 학교 동아리에서 만든 게임들을 구경하러 다니거나 행사장 한 구석에 앉아서 잤습니다.  
+
+원래 이 행사에는 평균적으로 25개 내외의 팀이 게임을 출품하는데, 올해는 이례적으로 37개 팀이 출전하기도 했고 점심 시간 즈음에는 넥슨 직원분들도 체험해보러 오셔서 북적북적했던 것 같습니다.  
+
+<figure>
+    <img src="/media/post/2024-02-20_NEXON/20240220_193541.jpg" alt="돌아가는 서울역" />
+    <figcaption>돌아가는 서울역</figcaption>
+</figure>
+
+어찌저찌 부스 운영을 끝내고 시상식까지 지켜보고 왔습니다. 원래는 다른 동아리 분들 및 넥슨 직원분들과 저녁 식사를 하고 해산할 예정이였으나, 저희는 다른 학교에 비해 이동 거리가 멀어 먼저 서울역으로 이동한 뒤 푸드코트에서 따로 식사를 하기로 했습니다.  
+
+<figure>
+    <img src="/media/post/2024-02-20_NEXON/20240220_195225.jpg" alt="야키텐규동" />
+    <figcaption>서울역 푸드코트 어딘가의 야키텐규동</figcaption>
+</figure>
+
+원래는 그냥 규동 먹으려고 했는데 하루종일 부스 세팅하고 서서 설명만 주구장창 하니 배가 많이 고파서 큰 새우튀김 2개가 올라가 있는 야키텐규동을 시켰습니다.  
+
+
+## 마무리
+이렇게 저녁 식사하고 기차 3시간 동안 타고 포항역에 도착. 택시 타고 기숙사에 도착하고 나서는 피곤해서 바로 뻗었습니다.  
+5명이서 포항-서울 왕복하니까 교통비만 50만원 넘게 나왔는데, 이 부분은 넥슨에 재직 중이신 동아리 선배님을 통해 지원받을 수 있었습니다.  
+
+이렇게 동아리에서의 큰 이벤트 중 하나를 얼추 마무리하고 지금은 동아리 회장으로서 또 다시 열심히 일하고 있습니다(...)  
+이번 글은 여기에서 마치겠습니다. 감사합니다.  
+
+
+### 관련 링크
+- [넥슨, 게임제작동아리 후원 프로그램 'NDM' 발표회 성료 | 전자신문](https://www.etnews.com/20240221000283)
+- [넥슨 게임제작발표회에 7개 대학 동아리 참여 | 게임메카](https://www.gamemeca.com/view.php?gid=1746023)
