[Docs] Completed 2024-05-10_POSTECH.md

--- a/public/posts/2024-05-10_POSTECH.md
+++ b/public/posts/2024-05-10_POSTECH.md
@@ -9,4 +9,31 @@
 ​부스 관련해서 안내해주시는 담당자 분이 10일 부스 자리가 남는다며 이틀동안 운영하는 것은 어떻겠냐고 하시는게 아니겠습니까?  
 저는 동아리 홍보를 위한 절호의 기회라 생각하고 바로 수락했고, 그렇게 5월 9일, 10일 낮 양일 동안 부스를 운영하게 되었습니다.  
 
+
 ## 대망의 축제 당일
+<figure>
+    <img src="/media/post/2024-05-10_POSTECH/20240509_134306.jpg" alt="동아리 부스" />
+    <figcaption>그렇게 준비된 동아리 부스</figcaption>
+</figure>
+
+어찌저찌 부스를 열어서 저희가 만든 게임 하나 / 커스텀 맵 체험기 하나 / 닌텐도 Wii / PS2 이렇게 가지고 내려갔습니다. 뒤에 두 게임기는 원래 유료로 진행하려고 했는데 사람들이 다 보기만 하고 지나가길래 전면 무료화 선언하고 풀코어 가동했습니다.  
+
+축제 때 있던 대부분의 부스들이 음식을 팔고 있었기 때문에, 게임을 풀코어로 돌리고 있던 저희 부스는 의도치 않은 틈새 시장이 되어 사람이 많이 몰렸습니다. 학교에 계신 동아리 선배님들도 슬쩍 오셔서 기부금을 쾌척하고 가시기도 했고, 사람들이 어떤 게임이든 게임을 플레이하는 모습을 볼 수 있어 좋았던 것 같습니다.  
+
+<figure>
+    <img src="/media/post/2024-05-10_POSTECH/20240510_154820.jpg" alt="링크 코스프레" />
+    <figcaption>그래서 얘가 젤다죠?</figcaption>
+</figure>
+
+원래 부스 운영만 하고 가만히 있으려고 했는데, 동아리 후배가 링크 코스프레 옷이 있다고 해서 둘째 날에는 관종 끼가 발동해서(...) 링크 코스프레 하고 내려갔습니다. 날씨가 더웠던 터라 가발까지는 못 쓰겠고 그냥 옷만 적당히 걸치고 나갔는데도 더워 죽는 줄 알았습니다.
+
+<figure>
+    <img src="/media/post/2024-05-10_POSTECH/1715503056537.jpg" alt="축제 공연" />
+    <figcaption>축제 공연 구경하는 샷으로 마무리</figcaption>
+</figure>
+
+축제 하면 공연을 빼놓을 수 없겠죠.  
+올해는 초청 연예인으로 에일리님이 오셨는데, 파워풀한 가창력과 압도적인 성량으로 무대를 뒤집어 놓으셨습니다.  
+저는 안 그래도 스카이워드 소드를 들고 있어서 이를 응원봉 삼아 열심히 흔들고 왔습니다.  
+
+작년에도 축제에 만화/애니메이션 동아리 부스 운영으로 참여하긴 했지만 그렇게까지 적극적이지는 않았는데, 올해는 부스도 이틀 운영하고 공연까지 보고나니 힘들어서 주말 내내 그냥 동아리방에 뻗어 있었습니다. 코로나 이후로 오랜만에 제대로 즐기는 축제였던 것 같네요.
