[Feat] Added footnote plugin

--- a/public/posts/2024-08-24_UNICON.md
+++ b/public/posts/2024-08-24_UNICON.md
@@ -1,1 +1,14 @@
 ## 들어가며...
+작년이랑 올해 초에도 그랬듯이, 저는 게임 개발 동아리 부원이라 정기적으로 게임을 만들어서 발표회에 출품을 합니다. 그래서 이번 여름 방학때도 동아리 내에서 팀을 짜서 게임을 개발하고, 각 팀의 결과물을 8월 24일에 진행하는 UNICON 발표회에 출품해야 해서 서울로 가는 기차를 단체로 잡았습니다.  
+
+마침 발표회 당일 밤에 제가 있는 게임 길드에서 파티룸을 잡고 밤새 논다고 해서 발표회가 끝나면 그 쪽으로 합류하기로 했고, 8월 25일에는 SETEC에서 일러스타 페스가, 그리고 본가가 속초인 동아리원이 일러스타 페스 다음날 속초 가자고 해서 포항-서울-속초-대구라는 정신나간 동선이 완성되었습니다.  
+이번에는 이 중에서 가장 짧은... '포항-서울'의 이야기를 해보도록 하겠습니다.
+
+
+## 우당탕탕 동아리 프로젝트
+학기 중에는 다들 강의 듣고 시험 치느라 바쁘기 때문에, 저희 동아리는 항상 학기 말에 프로젝트 희망 인원 조사를 받아서 방학동안 합숙 프로젝트를 진행합니다.  
+작년에는 인원을 아무리 모집해도 한 팀이 겨우 구성될 정도였으나, 올해는 제가 동아리 회장을 맡으며 진행한 동아리원 납치 프로젝트[^1](?)로 사람이 꽤 많아졌고, 이 중에서 게임을 만들어보고 싶다는 사람들도 많아서 총 3개의 팀이 구성되었습니다.
+
+
+
+[^1]: 같은 수업 듣는 게임 좋아하는 친구들을 동아리로 다 데려왔다고 보시면 됩니다.
